--- a/donate.html
+++ b/donate.html
@@ -21,7 +21,7 @@
     />
     <link href="./output.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" type="text/css" href="donate.css" />
+    <link rel="stylesheet" type="text/css" href="css/donate.css" />
   </head>
 
   <body>
