--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="index.css" />
-    <link href="./output.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link href="css/output.css" rel="stylesheet" />
   </head>
   <body>
     <script>
