--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <nav
         class="flex items-center lg:justify-center flex-wrap bg-[#0c4a6e] p-6"
       >
-        <a href="https://nehapol1108.github.io/LearnAlgoTask3/" class="flex items-center flex-shrink-0 text-white mr-6 space-x-4">
+        <a href="/" class="flex items-center flex-shrink-0 text-white mr-6 space-x-4">
           <img
             src="images/logo.webp"
             alt=""
@@ -49,7 +49,7 @@
       <div class="flex m-40">
         <div class="flex w-[300px] justify-between items-center"></div>
         <div class="flex flex-col space-y-10 justify-end w-[500px]">
-          <h3 class="font-bold text-6xl text-white">
+          <h3 class="font-bold text-6xl text-red">
            DONATION WEBSITE
           </h3>
           <h2 class="text-black text-4xl">“Help others without any reason and give without the expectation of receiving anything in return."</h2>
