--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" url = "https://nehapol1108.github.io/LearnAlgoTask3/" /> -->
+    <meta http-equiv="Refresh" content="0; url='https://nehapol1108.github.io/LearnAlgoTask3/'" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Donate</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -33,7 +35,7 @@
       <nav
         class="flex items-center lg:justify-center flex-wrap bg-[#0c4a6e] p-6"
       >
-        <a href="/" class="flex items-center flex-shrink-0 text-white mr-6 space-x-4">
+        <a href="https://nehapol1108.github.io/LearnAlgoTask3/" class="flex items-center flex-shrink-0 text-white mr-6 space-x-4">
           <img
             src="images/logo.webp"
             alt=""
