--- a/donate.html
+++ b/donate.html
@@ -27,11 +27,17 @@
   </head>
 
   <body>
+    <script>
+     
+      function funcopen(){
+        window.location.href = "index.html";
+      }
+    </script>
     <div >
       <nav
         class="flex items-center lg:justify-center flex-wrap bg-[#0c4a6e] p-6"
       >
-        <a href="/LearnAlgoTask3/" class="flex items-center flex-shrink-0 text-white mr-6 space-x-4">
+        <a class="flex items-center flex-shrink-0 text-white mr-6 space-x-4" onclick="funcopen()">
           <img
             src="images/logo.webp"
             alt=""
