--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Donate</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -30,12 +28,15 @@
       function myFunction() {
         window.location.href = "donate.html";
       }
+      function funcopen(){
+        window.location.href = "index.html";
+      }
     </script>
     <div class="">
       <nav
         class="flex items-center lg:justify-center flex-wrap bg-[#0c4a6e] p-6"
       >
-        <a href="/LearnAlgoTask3/" class="flex items-center flex-shrink-0 text-white mr-6 space-x-4">
+        <a class="flex items-center flex-shrink-0 text-white mr-6 space-x-4" onclick="funcopen()">
           <img
             src="images/logo.webp"
             alt=""
