--- a/donate.html
+++ b/donate.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Document</title>
     <link
       rel="stylesheet"
@@ -27,17 +25,11 @@
   </head>
 
   <body>
-    <script>
-     
-      function funcopen(){
-        window.location.href = "index.html";
-      }
-    </script>
     <div >
       <nav
         class="flex items-center lg:justify-center flex-wrap bg-[#0c4a6e] p-6"
       >
-        <a class="flex items-center flex-shrink-0 text-white mr-6 space-x-4" onclick="funcopen()">
+        <a href="/" class="flex items-center flex-shrink-0 text-white mr-6 space-x-4">
           <img
             src="images/logo.webp"
             alt=""
