--- a/index.html
+++ b/index.html
@@ -28,15 +28,12 @@
       function myFunction() {
         window.location.href = "donate.html";
       }
-      function funcopen(){
-        window.location.href = "index.html";
-      }
     </script>
     <div class="">
       <nav
         class="flex items-center lg:justify-center flex-wrap bg-[#0c4a6e] p-6"
       >
-        <a class="flex items-center flex-shrink-0 text-white mr-6 space-x-4" onclick="funcopen()">
+        <a href="/" class="flex items-center flex-shrink-0 text-white mr-6 space-x-4">
           <img
             src="images/logo.webp"
             alt=""
@@ -52,7 +49,7 @@
       <div class="flex m-40">
         <div class="flex w-[300px] justify-between items-center"></div>
         <div class="flex flex-col space-y-10 justify-end w-[500px]">
-          <h3 class="font-bold text-6xl text-red">
+          <h3 class="font-bold text-6xl text-white">
            DONATION WEBSITE
           </h3>
           <h2 class="text-black text-4xl">“Help others without any reason and give without the expectation of receiving anything in return."</h2>
