--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
       function myFunction() {
         window.location.href = "donate.html";
       }
+      
     </script>
     <div class="">
       <nav
         class="flex items-center lg:justify-center flex-wrap bg-[#0c4a6e] p-6"
       >
-        <a href="/" class="flex items-center flex-shrink-0 text-white mr-6 space-x-4">
+        <a href="https://nehapol1108.github.io/LearnAlgoTask3/" class="flex items-center flex-shrink-0 text-white mr-6 space-x-4">
           <img
             src="images/logo.webp"
             alt=""
